tests/bad_back.out
./bad_back.svx:5:13: error: Plumbed CLINO and BACKCLINO readings can't be in the same direction
./bad_back.svx:7:14: error: Plumbed CLINO and BACKCLINO readings can't be in the same direction
./bad_back.svx:8:14: error: Plumbed CLINO and BACKCLINO readings can't be in the same direction
./bad_back.svx:9:14: error: Plumbed CLINO and BACKCLINO readings can't be in the same direction
./bad_back.svx:10:14: error: CLINO and BACKCLINO readings must be of the same type
./bad_back.svx:11:14: error: CLINO and BACKCLINO readings must be of the same type

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 3 survey stations, joined by 2 legs.
There are 0 loops.
Total length of survey legs =    2.00m (   2.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    2.00m
Vertical range = 2.00m (from 4 at 1.00m to 2 at -1.00m)
North-South range = 0.00m (from 4 at 0.00m to 4 at 0.00m)
East-West range = 0.00m (from 4 at 0.00m to 4 at 0.00m)
   2 1-nodes.
   1 2-node.
There were 0 warning(s) and 6 error(s) - no output files produced.
