tests/bad_back.svx
; pos=fail warn=0 error=6
*data normal from to tape compass clino backcompass backclino
*fix 1 0 0 0
1 2 1.0  -  Down -   Up
1 3 1.0  -  Down -  Down
1 4 1.0  -   Up  -  Down
1 5 1.0  -   Up  -   Up
1 A 1.0  -   Up  -   +v
1 B 1.0  -   -v  -  Down
1 C 1.0 000  -89 -   Up
1 D 1.0  -   Down -  30
